[tool.poetry]
name = "ayclient"
version = "0.1.0"
description = ""
authors = ["Martastain <martas@imm.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
nxtools = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
